sprint2/global.css
@font-face {
    font-family: 'AvenirNextLTPro-Regular';
    src: url('./fonts/AvenirNextLTPro-Regular.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
  }
  
@font-face {
    font-family: 'AvenirNextLTPro-Bold';
    src: url('./fonts/AvenirNextLTPro-Bold.otf') format('opentype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'BigNoodleTitling';
    src: url('./fonts/BigNoodleTitling.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

body { 
    font-family: "AvenirNextLTPro-Regular",sans-serif;
    background-color: #FFFFFF; /* Lighter color scheme by default */
    color: #333333;
}

/* Dark Mode */
body.dark-mode {
    background-color: #0e0d0d;
    color: white;
}

/* Navigation styles */
.site-navigation {
    font-family: "BigNoodleTitling",sans-serif;
    background-color: #333333 !important;
    color: aliceblue !important;
}

.navbar-brand {
    color: white !important;
}

.navbar {
    background-color: #333333 !important;
    color: aliceblue !important;
}

.nav-link {
    color: white !important;
}

.nav-link:hover {
    color: #ABB2B9 !important;
}

#admin-dropdown.show {
    color: #ABB2B9 !important;
}

.dropdown-item.active {
    background-color: white !important;
}

.active {
    color: #6CB443 !important;
}

.signUp {
    margin-right: 5px;
}

.navbar-toggler {
    border: none;
}

/* Form Styles */

.form-title {
    font-family: "BigNoodleTitling";
}

.form-container {
    max-width: 600px;
    margin: 50px auto;
    padding: 20px;
    border: 1px solid #DDD;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

label {
    display: block;
    margin-bottom: 5px;
}

input[type="text"],
input[type="email"],
input[type="url"],
input[type="date"],
input[type="number"],
textarea {
    width: 100%;
    padding: 8px;
    margin-bottom: 10px;
    border: 1px solid #DDD;
    border-radius: 4px;
}

input[type="radio"] {
    margin-right: 5px;
}

/* BUTTON STYLES */
.btn {
    font-family: "AvenirNextLTPro-Regular",sans-serif;
}

/* Link Buttons */
.btn-link {
    color: #2c882b;
}

.btn-link:hover {
    color: #2c882b !important;
}

/* Primary GRC GREEN */
.btn-bd-primary {
    background-color: #2c882b;
    color: aliceblue;
}

.btn-bd-primary:hover {
    background-color: #287a27;
    color: aliceblue;
}

.btn-bd-primary:active {
    border-color: #236d22 !important;
    background-color: #236d22 !important;
    color: aliceblue !important;
}
/* Primary GRC GREEN-inverse */
.btn-bd-primary-inverse {
    background-color: white;
    color: #2c882b;
}

.btn-bd-primary-inverse:hover {
    background-color: white;
    color: #287a27;
}

.btn-bd-primary-inverse:active {
    border-color: white !important;
    background-color: white !important;
    color: #236d22 !important;
}

/* Accent Sky Blue */
.btn-bd-accent-blue {
    background-color: #418FDE;
    color: aliceblue;
}

.btn-bd-accent-blue:hover {
    background-color: #3b81c8;
    color: aliceblue;
}

.btn-bd-accent-blue:active {
    border-color: #3472b2 !important;
    background-color: #3472b2 !important;
    color: aliceblue !important;
}

